Fix VersionTooltip hiding behind other Cards
Fixes #50

--- a/src/styles/PackageCard.module.scss
+++ b/src/styles/PackageCard.module.scss
@@ -17,6 +17,11 @@
   @include ms-depth-4;
 }
 
+.cardFrame:hover,
+.cardFrame:focus-within {
+  z-index: 1;
+}
+
 .silhouette {
   position: absolute;
   box-sizing: border-box;
